[package]
name = "wafer-guest"
version = "0.1.0"
edition = "2021"
description = "WAFER guest SDK for writing blocks compiled to WebAssembly (wasm32-wasip1)"
license = "MIT"
repository = "https://github.com/wafer-run/wafer-guest-rs"
keywords = ["wafer", "wasm", "guest", "blocks", "pipeline"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
