[package]
name = "wafer-sdk"
version = "0.1.0"
edition = "2021"
description = "WAFER SDK for writing blocks compiled to WebAssembly components"
license = "MIT"
repository = "https://github.com/wafer-run/wafer-sdk-rs"
keywords = ["wafer", "wasm", "guest", "blocks", "pipeline"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
